# markdown_demo

./: POETRY_STREAMLIT_GUIDE.md  README.md  config.py  data_consolidator.py  data_importer.py  data_normalizer.py  data_validator.py  database.py  main.py  pyproject.toml  reporter.py  requirements.txt  streamlit_app.py  test_suite.py
.streamlit/: config.toml
db/: schema.sql
docs/: data_design.md  markdown_demo.md  mermaid_demo.md  sample_queries.sql  seed.sql
src/: __init__.py  consolidator.py  datastore.py  exporter.py  importer.py  matcher.py  models.py  normalizer.py  reports.py  validators.py
tests/: test_consolidator.py  test_datastore.py  test_exporter.py  test_importer.py  test_matcher.py  test_models.py  test_normalizer.py  test_reports.py  test_validators.py
