[tool.poetry]
name = "operations-data-consolidation"
version = "1.0.0"
description = "Consolidate production, quality, and shipping data into a unified dataset for operations analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
streamlit = "^1.28.0"
plotly = "^5.17.0"
altair = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
