[tool.poetry]
name = "markdown-demo"
version = "0.1.0"
description = "Data consolidation scaffolding with markdown documentation"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
ruff = "^0.15.4"
mypy = "^1.19.1"
pytest-cov = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88  # same as black default

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes: undefined names, unused imports, etc.
    "I",   # isort: import ordering
    "B",   # flake8-bugbear: common bug patterns
    "UP",  # pyupgrade: use modern Python syntax
]
ignore = [
    "E501",  # line too long - handled by formatter, not linter
    "B008",  # do not perform function call in default args (common in FastAPI/Streamlit)
]

# files/dirs to skip
exclude = [
    ".venv",
    "__pycache__",
    "migrations",
    "alembic",
]

[tool.ruff.lint.isort]
known-first-party = ["app", "core", "utils", "services"]  # your own modules

[tool.ruff.format]
quote-style = "double"        # consistent with black
indent-style = "space"
skip-magic-trailing-comma = false
